Refactor JVMTI test